--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -3,3 +3,27 @@
 body {
   font-family: var(--font-poppins), sans-serif;
 }
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: #29d;
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 3px;
+}
+
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  box-shadow:
+    0 0 10px #29d,
+    0 0 5px #29d;
+  opacity: 1;
+  transform: rotate(3deg) translate(0px, 4px);
+}
